--- a/scss/layout/_bio.scss
+++ b/scss/layout/_bio.scss
@@ -1,6 +1,7 @@
 .mainbio{
 	height: 100vh;
 	display: table-footer-group;
+	background: linear-gradient(#f7602f, #332b96, #f7602f);
 }
 .h2bio{
 	margin-top: 80px;
@@ -10,16 +11,19 @@
 .h3bio{
 	text-align: center;
 	text-shadow: 1px 1px 2px pink;
-	margin: 20px;
+	margin: 50px;
    line-height: 1.5em;
+}
+.caja{
+	overflow: hidden;
 }
 .integrantes{
 	text-align: center;
 	text-shadow: 1px 1px 2px pink;
 	margin: 20px;
-   line-height: 1.5em;
+    line-height: 1.5em;
 }
 h3{
 	text-align: center;
-   font-family: 'DM Sans', sans-serif; 
+    font-family: 'DM Sans', sans-serif; 
 }
