--- a/scss/layout/_bio.scss
+++ b/scss/layout/_bio.scss
@@ -1,29 +1,30 @@
-.mainbio{
-	height: 100vh;
-	display: table-footer-group;
-	background: linear-gradient(#f7602f, #332b96, #f7602f);
+
+.mainbio {
+  height: 100vh;
+  display: table-footer-group;
+  background: linear-gradient(#f7602f, #332b96, #f7602f);
 }
-.h2bio{
-	margin-top: 80px;
-	padding: 10px;
-	color: black;
+.h2bio {
+  margin-top: 80px;
+  padding: 10px;
+  color: black;
 }
-.h3bio{
-	text-align: center;
-	text-shadow: 1px 1px 2px pink;
-	margin: 50px;
-   line-height: 1.5em;
+.h3bio {
+  text-align: center;
+  text-shadow: 1px 1px 2px pink;
+  margin: 50px;
+  line-height: 1.5em;
 }
-.caja{
-	overflow: hidden;
+.caja {
+  overflow: hidden;
 }
-.integrantes{
-	text-align: center;
-	text-shadow: 1px 1px 2px pink;
-	margin: 20px;
-    line-height: 1.5em;
+.integrantes {
+  text-align: center;
+  text-shadow: 1px 1px 2px pink;
+  margin: 20px;
+  line-height: 1.5em;
 }
-h3{
-	text-align: center;
-    font-family: 'DM Sans', sans-serif; 
+h3 {
+  text-align: center;
+  font-family: "DM Sans", sans-serif;
 }
