--- a/scss/layout/_bio.scss
+++ b/scss/layout/_bio.scss
@@ -8,6 +8,16 @@
   margin-top: 80px;
   padding: 10px;
   color: $color;
+  &:hover {
+    transition: .5s;
+    font-size: 50px;
+  }
+}
+.h3bioprincipal {
+  text-align: center;
+  margin: 30px;
+  line-height: 1.5em;
+  min-height: 50vh;
 }
 .h3bio {
   text-align: center;
@@ -16,6 +26,9 @@
 }
 .caja {
   overflow: hidden;
+}
+.h2integrantes{
+  object-fit: cover;
 }
 .integrantes {
   text-align: center;
